--- a/Kubernetes/horizontalpod.yml
+++ b/Kubernetes/horizontalpod.yml
@@ -6,14 +6,14 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: serveur-deployment  # Nom de ton déploiement backend
+    name: serveur-deployment
   minReplicas: 2
-  maxReplicas: 5
+  maxReplicas: 6
   metrics:
     - type: Resource
       resource:
         name: cpu
         target:
           type: Utilization
-          averageUtilization: 5  # Si CPU > 50%, ça scale
+          averageUtilization: 50
 
