--- a/Kubernetes/front-deployment.yml
+++ b/Kubernetes/front-deployment.yml
@@ -35,5 +35,5 @@ spec:
     - protocol: TCP
       port: 80            # Port externe sur lequel le service sera accessible
       targetPort: 3000    # Port interne du conteneur
-  type: LoadBalancer     # Change en NodePort si tu préfères l'option NodePort
+  type: LoadBalancer     
 
